# when-is-the-lambda-init-phase-free-and-when-is-it-billed

./: README.md  app.py  go.mod  go.sum  setup.py
lambda/extensions/python_external/extensions/: sleepwrapper
lambda/extensions/python_external/sleepwrapper/: extension.py
lambda/extensions/python_internal/: sleepwrapper
lambda/functions/base_go/: build.sh
lambda/functions/base_nodejs/: main.js
lambda/functions/base_ruby/: main.rb
lambda/functions/bootstrapped_go/: main.go
lambda/functions/bootstrapped_go_arm/: build.sh
lambda/functions/bootstrapped_rust/: Cargo.toml  build.sh
lambda/functions/bootstrapped_rust/src/: main.rs
lambda/functions/docker_nodejs_12/: Dockerfile
lambda/functions/docker_nodejs_14/: Dockerfile
lambda/functions/python_3_7/: Dockerfile
lambda/functions/python_3_8/: Dockerfile  main.py
lambda/functions/python_3_9/: Dockerfile
lambda/functions/python_3_9_alpine/: Dockerfile
lambda/functions/python_3_9_arm/: Dockerfile
lambda/functions/speedtest_go_arm64/: main.go
lambda/functions/speedtest_go_docker/: build.sh
lambda/functions/speedtest_go_x86/: build.sh
when_is_the_lambda_init_phase_free_and_when_is_it_billed/: when_is_the_lambda_init_phase_free_and_when_is_it_billed_stack.py
when_is_the_lambda_init_phase_free_and_when_is_it_billed/tests/docker/nodejs/: tests.py
when_is_the_lambda_init_phase_free_and_when_is_it_billed/tests/docker/python/: tests.py
when_is_the_lambda_init_phase_free_and_when_is_it_billed/tests/speed/go/: tests.py
(+7 files in other folders)
